// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`拡張v1の遠征を再現する: role.oathbound / none 1`] = `
{
  "fingerprint": "6db73e8574c9a0a175e24db34bba3cbf3e7a8c131f1ef583004356ee467a7582",
  "floor": 10,
  "status": "won",
  "turn": 893,
}
`;

exports[`拡張v1の遠征を再現する: role.ash-scout / none 1`] = `
{
  "fingerprint": "e316bb269461c5aa020f42c8ba00d8160b9bf5854dfaf399a18ce487450c7099",
  "floor": 6,
  "status": "returned",
  "turn": 578,
}
`;

exports[`拡張v1の遠征を再現する: role.lantern-priest / none 1`] = `
{
  "fingerprint": "3dc6723f2dc8ab9618fe39edf23ba3e9c440648a48e3fb48a70bae2fa48fa5c9",
  "floor": 6,
  "status": "returned",
  "turn": 561,
}
`;

exports[`拡張v1の遠征を再現する: role.relic-surveyor / none 1`] = `
{
  "fingerprint": "31f68a050adb43c4faa7e92eabb9f07cbe64f1900b44fc344d22b88243c214d5",
  "floor": 10,
  "status": "won",
  "turn": 917,
}
`;

exports[`拡張v1の遠征を再現する: role.ash-apothecary / none 1`] = `
{
  "fingerprint": "50ae69b95e1efb6b2b2956bde0f7e8e6bc80bcb784c0b0ea2dfd4b0ab9105732",
  "floor": 6,
  "status": "returned",
  "turn": 622,
}
`;

exports[`拡張v1の遠征を再現する: role.iron-oath-vanguard / none 1`] = `
{
  "fingerprint": "73bff42e8328757f7fbe4bc9b1a43280a046f214b4d183c21f0cb229040e7768",
  "floor": 10,
  "status": "won",
  "turn": 885,
}
`;

exports[`拡張v1の遠征を再現する: role.keyshadow-rogue / none 1`] = `
{
  "fingerprint": "372c11af9c1bc3185102a6daa473ecddb434e7354bfd9cac5f93eb2d013a594e",
  "floor": 6,
  "status": "returned",
  "turn": 551,
}
`;

exports[`拡張v1の遠征を再現する: role.oathbound / lantern 1`] = `
{
  "fingerprint": "ac67326e839427508205b37a5ff2dca542f4d9a6bfa668786fe0548d2abed2cf",
  "floor": 10,
  "status": "won",
  "turn": 924,
}
`;

exports[`拡張v1の遠征を再現する: role.ash-scout / lantern 1`] = `
{
  "fingerprint": "55acb156e34abcee6bab827d208a93e88c08f4658a2244a5bdfdbde227cee87c",
  "floor": 6,
  "status": "returned",
  "turn": 553,
}
`;

exports[`拡張v1の遠征を再現する: role.lantern-priest / lantern 1`] = `
{
  "fingerprint": "8bdd44495fe69db21b2ea2397815a8b10efb66b9014f0ceeccb9aabf03bb6f66",
  "floor": 6,
  "status": "returned",
  "turn": 562,
}
`;

exports[`拡張v1の遠征を再現する: role.relic-surveyor / lantern 1`] = `
{
  "fingerprint": "96cfad9ee4ecf9882070ab5bc73f0fd1d815dedde0b81c8634c4a743ba1163fb",
  "floor": 10,
  "status": "won",
  "turn": 813,
}
`;

exports[`拡張v1の遠征を再現する: role.ash-apothecary / lantern 1`] = `
{
  "fingerprint": "2c2a7c9fd900164ffb98bacb8dd1b06c21a640a184db98847a9b3fed3bd34b4d",
  "floor": 6,
  "status": "returned",
  "turn": 609,
}
`;

exports[`拡張v1の遠征を再現する: role.iron-oath-vanguard / lantern 1`] = `
{
  "fingerprint": "c7acd7214e84eeefa3e5aaeeeee9ffc106036fd02535b34d607947856fc1ccf6",
  "floor": 10,
  "status": "won",
  "turn": 864,
}
`;

exports[`拡張v1の遠征を再現する: role.keyshadow-rogue / lantern 1`] = `
{
  "fingerprint": "d6015f4bc1000d51e30f031543ff7efdc7b4fca99121b80c8e752951ab7c3e77",
  "floor": 6,
  "status": "returned",
  "turn": 476,
}
`;
